Made a display grid function that works in the commented code, but I'm trying to figure out how to put it into a module.

--- a/style.css
+++ b/style.css
@@ -8,4 +8,8 @@
 
 .grid {
     background-color: green;
+    display: flex;
+    align-items: center;
+    font-size: 48pt;
+    justify-content: center;
 }
