A few commits late really: Managed to get the grid display function into a module (with the help of Nhan), created a factory for the players that works fairly well, started working on the module for the flow of the game.  Can I share module prototypes between the board and flow?  How can I access the gameboard more easily for the flow module?

--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+.body {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 .container {
     height: 80vh;
     display: grid;
     grid-template-columns: repeat(3, 200px);
     grid-template-rows: repeat(3, 200px);
     gap: 12px;
+    background-color: aliceblue;
 }
 
 .grid {
@@ -12,4 +18,10 @@
     align-items: center;
     font-size: 48pt;
     justify-content: center;
+}
+
+.info {
+    background-color: black;
+    color: white;
+    font-size: 28pt;
 }
